# nkr

./: .gitignore  CMakeLists.txt  CMakeLists_Funcs.cmake  CMakePresets.json  LICENSE.txt  README.md  STYLE.md  build.ps1  cpp.hint  docs.doxywizard  nkr.sln
doctest/: CMakeLists.txt  CMakeLists_Funcs.cmake  CMakeLists_Sources.cmake  doctest.vcxproj  doctest.vcxproj.filters
doctest/include/: doctest.h
doctest/src/: doctest.cpp
nkr/: CMakeLists.txt  CMakeLists_Funcs.cmake  CMakeLists_Sources.cmake  nkr.vcxproj  nkr.vcxproj.filters
nkr/docs/: os.dox
nkr/docs/css/: custom.css
nkr/docs/include/: index.md  overview.md
nkr/include/nkr/: allocator_err.h  allocator_heap_t.h  allocator_heap_t_dec.h  allocator_heap_t_def.h  allocator_heap_zeros_t.h  allocator_heap_zeros_t_dec.h  allocator_heap_zeros_t_def.h  allocator_i.h  array_dynamic_t.h  array_dynamic_t_dec.h  array_dynamic_t_def.h  array_i.h  atomic_t.dox  atomic_t.h  atomic_t.inl  atomic_t_dec.h  atomic_t_def.h  atomic_t_dox.h  bool_t.dox  bool_t.h  bool_t.inl  bool_t_dec.h  bool_t_def.h  bool_t_dox.h  built_ins.h  built_ins_dec.h  built_ins_dec_def.h  built_ins_def.h  charcoder_ascii_t.h  charcoder_ascii_t.inl  charcoder_i.h  charcoder_utf_16_t.h  charcoder_utf_16_t.inl  charcoder_utf_32_t.h  charcoder_utf_32_t.inl  charcoder_utf_8_i.h  charcoder_utf_8_t.h  charcoder_utf_8_t.inl  constant_t.h  constant_t_dec.h  (+191 more)
nkr/src/: allocator_heap_t.cpp  allocator_heap_zeros_t.cpp  os.cpp  pointer_t.cpp  random.cpp  temp.cpp  utils.cpp  z_allocator_heap_t.cpp  z_allocator_heap_zeros_t.cpp  z_pointer_t.cpp  z_utils.cpp
nkr_tests/: CMakeLists.txt
nkr_tests/allocator/: CMakeLists.txt  CMakeLists_Funcs.cmake  allocator.vcxproj  allocator.vcxproj.filters
nkr_tests/allocator/src/: heap_t.cpp  heap_zeros_t.cpp
nkr_tests/array/: CMakeLists.txt  CMakeLists_Funcs.cmake  array.vcxproj  array.vcxproj.filters
nkr_tests/array/src/: cpp_t.cpp  dynamic_array_t.cpp  dynamic_t.cpp  high_pad_t.cpp  instant_t.cpp  stack_array_t.cpp  stack_t.cpp  static_t.cpp
nkr_tests/atomic_t/: CMakeLists.txt  CMakeLists_Funcs.cmake  atomic_t.vcxproj  atomic_t.vcxproj.filters
nkr_tests/atomic_t/src/: boolean_p.cpp  integer_p.cpp  pointer_p.cpp  real_p.cpp  void_pointer_p.cpp
nkr_tests/bool_t/: bool_t.vcxproj  bool_t.vcxproj.filters
nkr_tests/bool_t/src/: bool_t.cpp  main.cpp
nkr_tests/boolean/: CMakeLists.txt  CMakeLists_Funcs.cmake  CMakeLists_Sources.cmake  boolean.vcxproj
nkr_tests/boolean/src/: bool_t.cpp  cpp_t.cpp  pure_t.cpp
nkr_tests/charcoder/: CMakeLists.txt  CMakeLists_Funcs.cmake  charcoder.vcxproj  charcoder.vcxproj.filters
nkr_tests/charcoder/include/: random.h  unicode.h
nkr_tests/charcoder/src/: ascii_t.cpp  utf_16_t.cpp  utf_32_be_t.cpp  utf_32_le_t.cpp  utf_32_t.cpp  utf_8_t.cpp
nkr_tests/concurrency/: CMakeLists.txt  CMakeLists_Funcs.cmake  concurrency.vcxproj  concurrency.vcxproj.filters
nkr_tests/concurrency/src/: lockee_t.cpp
nkr_tests/constant/: CMakeLists.txt  CMakeLists_Funcs.cmake  constant.vcxproj  constant.vcxproj.filters
nkr_tests/constant/src/: constant_t.cpp  contant_t.cpp
nkr_tests/cpp/: CMakeLists.txt  CMakeLists_Funcs.cmake  cpp.vcxproj  cpp.vcxproj.filters  nkr_test_cpp.aps
nkr_tests/cpp/src/: cpp.cpp
nkr_tests/docs/: CMakeLists.txt  CMakeLists_Funcs.cmake  docs.vcxproj  docs.vcxproj.filters
nkr_tests/docs/src/: designs.cpp  glossary.cpp
nkr_tests/enum/: nkr_test_enum.vcxproj  nkr_test_enum.vcxproj.filters
nkr_tests/enum/src/: enum_flags_t.cpp  enum_type_t.cpp  flags_t.cpp
nkr_tests/enumeration/: CMakeLists.txt  CMakeLists_Funcs.cmake  enumeration.vcxproj  nkr_test_enumeration.vcxproj
nkr_tests/enumeration/src/: cpp_t.cpp  errors_t.cpp  (+5 more)
nkr_tests/generic/: CMakeLists.txt  CMakeLists_Funcs.cmake  CMakeLists_Sources.cmake  generic.vcxproj  generic.vcxproj.filters
nkr_tests/generic_template/: generic_template.vcxproj  generic_template.vcxproj.filters
nkr_tests/generic_template_template/: generic_template_template.vcxproj  generic_template_template.vcxproj.filters
nkr_tests/hasher/: CMakeLists.txt  CMakeLists_Funcs.cmake  hasher.vcxproj  hasher.vcxproj.filters
nkr_tests/interface/: CMakeLists.txt  CMakeLists_Funcs.cmake  interface.vcxproj  interface.vcxproj.filters
nkr_tests/macros/: CMakeLists.txt  CMakeLists_Funcs.cmake  macros.vcxproj  macros.vcxproj.filters
nkr_tests/math/: CMakeLists.txt  CMakeLists_Funcs.cmake  math.vcxproj
nkr_tests/maybe_t/: CMakeLists.txt  CMakeLists_Funcs.cmake  maybe_t.vcxproj  maybe_t.vcxproj.filters
nkr_tests/negatable/: CMakeLists.txt  CMakeLists_Funcs.cmake  negatable.vcxproj  negatable.vcxproj.filters
nkr_tests/none/: CMakeLists.txt  CMakeLists_Funcs.cmake  none.vcxproj  none.vcxproj.filters
nkr_tests/number/: CMakeLists.txt  CMakeLists_Funcs.cmake  number.vcxproj  number.vcxproj.filters
nkr_tests/optional/: CMakeLists.txt  CMakeLists_Funcs.cmake  optional.vcxproj  optional.vcxproj.filters
nkr_tests/os/: CMakeLists.txt  CMakeLists_Funcs.cmake  os.vcxproj  os.vcxproj.filters
nkr_tests/pointer/: CMakeLists.txt  CMakeLists_Funcs.cmake  pointer.vcxproj  pointer.vcxproj.filters
nkr_tests/pointer_t/: CMakeLists.txt  CMakeLists_Funcs.cmake  pointer_t.vcxproj  pointer_t.vcxproj.filters
nkr_tests/positive/: CMakeLists.txt  CMakeLists_Funcs.cmake  positive.vcxproj  positive.vcxproj.filters
nkr_tests/random/: random.vcxproj  random.vcxproj.filters
nkr_tests/randomness/: CMakeLists.txt  CMakeLists_Funcs.cmake  randomness.vcxproj  randomness.vcxproj.filters
nkr_tests/regex_t/: CMakeLists.txt  CMakeLists_Funcs.cmake  regex_t.vcxproj  regex_t.vcxproj.filters
nkr_tests/string/: CMakeLists.txt  CMakeLists_Funcs.cmake  string.filters  string.vcxproj
nkr_tests/tr/: CMakeLists.txt  CMakeLists_Funcs.cmake  tr.vcxproj  tr.vcxproj.filters
nkr_tests/traits/: traits.vcxproj
nkr_tests/tree/: CMakeLists.txt  CMakeLists_Funcs.cmake  tree.vcxproj  tree.vcxproj.filters
nkr_tests/tuple/: CMakeLists.txt  CMakeLists_Funcs.cmake  tuple.vcxproj  tuple.vcxproj.filters
nkr_tests/utils/: CMakeLists.txt  CMakeLists_Funcs.cmake  utils.vcxproj
(+5351 files in other folders)
